# afm-cell-mask-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: 01_inspect_dataset.py  02_make_masks.py  02_make_masks_hoseyn.py  03_overlay_examples.py  04_summarize_masks.py  08_debug_dn3_rate.py  09_prune_stale_masks.py  10_export_dataset.py  main.py
data_samples/DN1-rapid/: cell01meas0000.tif  cell02meas0000.tif  cell03meas0000.tif  cell04meas0000.tif  cell05meas0000.tif
data_samples/DN1-rate/: cell01meas0000.tif  cell02meas0000.tif  cell03meas0000.tif  cell04meas0000.tif  cell05meas0000.tif
results/: mask_summary.csv
src/afm_cell_training/: __init__.py
