[project]
name = "afm-cell-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeremy-Kwok", email = "Jeremykwok917@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyrtz2>=1.4.7",
]

[project.scripts]
afm-cell-training = "afm_cell_training:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
